test/conformance/chainsaw/namespaced-deleting-policies/schedule/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: to-be-deleted
  namespace: ndpol-schedule
spec:
  containers:
  - name: nginx
    image: nginx:latest
