test/conformance/chainsaw/namespaced-deleting-policies/schedule/pod-assert.yaml
apiVersion: v1
kind: Pod
metadata:
  name: to-be-deleted
  namespace: ndpol-schedule
